fixing spacing and adding things

--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,58 @@ body{
     background:  url(http://wallpaper-gallery.net/images/minimal-wallpaper/minimal-wallpaper-12.jpg) no-repeat center center fixed; 
     background-size: cover;
     font-family: "Bookman Old Style";
-    margin: 90px 0rem 0rem 0rem;
+    margin: 90px 0rem 0rem 0%;
+    width: 90%;
+}
+
+img {
+    display: block;
+    margin: 0%;
+    width: 20%;
 }
 
 .about-me{
-    margin: 5% 10% 5% 10%;
-}
-
-#large-links{
-    margin: 5% 10% 5% 10%;
-    text-align: left;
+    margin: auto;
+    margin-top: 60px;
+    width: 80%;
 }
 
 .card{
     margin-bottom: 2rem;
 }
 
-#title{
+#contactMe{
     margin-top: 60px;
-    margin: 5% 35% 5% 35%;
+}
+
+#title{
+    margin: auto;
+    margin-top: 60px;
+    width: 35%;
+    padding: 10px;
+    text-align: center;
+}
+
+#skills{
+    margin: auto;
+    margin-top: 60px;
+    margin-left: 12rem;
+    width: 80%;
+    text-align: center;
+}
+
+#involvement{
+    margin: auto;
+    margin-top: 60px;
+    margin-left: 8rem;
+    width: 80%;
     text-align: center;
 }
 
 #projects{
-    margin: 5% 10% 5% 10%;
+    margin: 0rem;
+    width: 100%;
+    padding: 0rem;
 }
 
 #link-buttons{
